--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-contourpy==1.2.0	
-cycler==0.12.1	
-et-xmlfile==1.1.0	
-fonttools==4.47.0	
-joblib==1.3.2	
-kiwisolver==1.4.5	
-matplotlib==3.8.2	
-mlxtend==0.23.1	
-networkx==3.1	
-numpy==1.25.2	
-openpyxl==3.1.2	
-packaging==23.2	
-pandas==2.0.3	
-pillow==10.2.0	
-pyparsing==3.1.1	
-python-dateutil==2.8.2	
-pytz==2023.3	
-scikit-fuzzy==0.4.2	0.4.2
-scikit-learn==1.3.2	
-scipy==1.11.2	
+et-xmlfile==1.1.0
+networkx==3.1
+numpy==1.25.2
+openpyxl==3.1.2
+pandas==2.0.3
+python-dateutil==2.8.2
+pytz==2023.3
+scikit-fuzzy==0.4.2
+scipy==1.11.2
+six==1.16.0
+tzdata==2023.3
